# MentOS

./: .clang-format  .clang-tidy  .gdb.debug  .gdbhelpers  .gitignore  .travis.jml  ARCHITECTURE.md  CMakeLists.txt  CODING_STYLE.md  LICENSE.md  README.md  RESTRUCTURING_SUMMARY.md  TODO.md  prova.txt  toolchain-i686-elf.cmake  toolchain.cmake
boot/: CMakeLists.txt  README.md
boot/linker/: boot.lds  kernel.lds
boot/src/: boot.S  boot.c
doc/: CMakeCache.txt  CMakeLists.txt  Doxygen  HOWTO_use_grub_script.md  doxygen.css  doxygen.scss  dreamos.doxyfile  header.html  scan_codes.md  scan_codes_it.md  signal.md  syscall.md  syscall.txt
doc/doxygen/: CMakeLists.txt  Doxyfile  doxygen.css  doxygen.scss  footer.html  header.html
examples/: 01_hello.c  02_fork.c  04_file_io.c  CMakeLists.txt
initscp/: CMakeLists.txt  README.md
initscp/inc/: initfscp.h
initscp/src/: initfscp.c
kernel/: CMakeLists.txt  README.md
kernel/inc/: boot.h  multiboot.h  proc_access.h  resource_tracing.h  version.h
kernel/inc/descriptor_tables/: gdt.h  idt.h  isr.h
kernel/inc/devices/: fpu.h  pci.h
kernel/inc/drivers/: mouse.h  ps2.h  rtc.h
kernel/inc/fs/: attr.h  fhs.h  pipe.h  vfs_types.h
kernel/inc/hardware/: pic8259.h
kernel/inc/io/: debug.h
kernel/inc/klib/: compiler.h  stack_helper.h
kernel/inc/mem/: page_fault.h
kernel/inc/process/: prio.h  process.h
kernel/inc/sys/: module.h
kernel/inc/system/: signal.h  syscall.h
kernel/inc/tests/: test_utils.h
kernel/src/: kernel.c  multiboot.c  resource_tracing.c  stack.S
kernel/src/crypt/: sha256.c
kernel/src/descriptor_tables/: exception.S  exception.c  gdt.c  idt.S  idt.c  interrupt.c  tss.c
kernel/src/devices/: fpu.c  pci.c
kernel/src/drivers/: ata.c  fdc.c  mem.c  mouse.c  ps2.c  rtc.c
kernel/src/elf/: elf.c
kernel/src/fs/: ext2.c  namei.c  pipe.c  procfs.c  readdir.c  stat.c  sync.c  vfs.c
kernel/src/hardware/: pic8259.c  timer.c
kernel/src/io/: debug.c  proc_video.c  stdio.c  video.c
kernel/src/ipc/: msg.c  sem.c  shm.c
kernel/src/klib/: assert.c  math.c  mutex.c  rbtree.c  spinlock.c  stdlib.c  strerror.c  time.c  vsprintf.c
kernel/src/mem/: page_fault.c  paging.c
kernel/src/process/: pid_manager.c  process.c  scheduler.c  scheduler_algorithm.c  scheduler_feedback.c  user.S  wait.c
kernel/src/sys/: module.c  utsname.c
kernel/src/system/: errno.c  signal.c  syscall.c
kernel/src/tests/: runner.c  test_utils.c
lib/: CMakeLists.txt  README.md
lib/inc/: array.h  assert.h  ctype.h  dirent.h  fcntl.h  hashmap.h  math.h  shadow.h  stdarg.h  stdint.h  unistd.h
lib/inc/bits/: ioctls.h
lib/inc/io/: mm_io.h  port_io.h
lib/inc/sys/: ioctl.h  mman.h  msg.h  sem.h  utsname.h
lib/src/: crt0.S  list.c  math.c  ndtree.c  shadow.c  stdio.c  termios.c  vscanf.c
lib/src/sys/: ipc.c  unistd.c  utsname.c
lib/src/unistd/: chown.c  creat.c  exec.c  fcntl.c  fork.c  getdents.c  getgid.c  getpgid.c  mkdir.c  open.c  rmdir.c  setgid.c  signal.c  symlink.c  unlink.c  write.c
libc/: CMakeLists.txt
libc/inc/: array.h  assert.h  ctype.h  debug.h  dirent.h  err.h  errno.h  fcntl.h  fcvt.h  grp.h  hashmap.h  libgen.h  limits.h  list.h  list_head.h  list_head_algorithm.h  math.h  ndtree.h  os_root_path.h  pwd.h  readline.h  ring_buffer.h  sched.h  shadow.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  strerror.h  string.h  syslog.h  termios.h  time.h  unistd.h
libc/inc/bits/: ioctls.h  stat.h  termios-struct.h
libc/inc/crypt/: sha256.h
libc/inc/io/: ansi_colors.h  debug.h  mm_io.h  port_io.h
libc/inc/ipc/: ipc.h  msg.h  sem.h  shm.h
libc/inc/sys/: bitops.h  dirent.h  errno.h  ioctl.h  ipc.h  kernel_levels.h  list_head.h  list_head_algorithm.h  mman.h  msg.h  reboot.h  sem.h  shm.h  stat.h  types.h  unistd.h  utsname.h  wait.h
libc/inc/system/: syscall_types.h
libc/src/: abort.c  assert.c  crt0.S  ctype.c  debug.c  err.c  fcvt.c  grp.c  hashmap.c  libc_start.c  libgen.c  math.c  ndtree.c  pwd.c  readline.c  sched.c  setenv.c  shadow.c  stdio.c  stdlib.c  strerror.c  string.c  syslog.c  termios.c  time.c  vscanf.c  vsprintf.c
libc/src/crypt/: sha256.c
libc/src/io/: debug.c  mm_io.c  port_io.c
libc/src/ipc/: ipc.c
libc/src/sys/: errno.c  ioctl.c  ipc.c  mman.c  unistd.c  utsname.c
libc/src/unistd/: chdir.c  chmod.c  chown.c  close.c  creat.c  dup.c  exec.c  exit.c  fcntl.c  fork.c  getcwd.c  getdents.c  getgid.c  getpgid.c  getpid.c  getppid.c  getsid.c  getuid.c  interval.c  kill.c  lseek.c  mkdir.c  nice.c  open.c  pipe.c  read.c  readlink.c  reboot.c  rmdir.c  setgid.c  setpgid.c  setsid.c  setuid.c  signal.c  stat.c  symlink.c  unlink.c  waitpid.c  write.c
mentos/: CMakeLists.txt  boot.S  boot.asm  boot.lds  kernel.lds
mentos/inc/: boot.h  kernel.h  link_access.h  multiboot.h  proc_access.h  resource_tracing.h  version.h
mentos/inc/bits/: ioctls.h  termios-struct.h
mentos/inc/descriptor_tables/: gdt.h  idt.h  isr.h  tss.h
mentos/inc/devices/: fpu.h  pci.h
mentos/inc/drivers/: ata.h  fdc.h  mem.h  mouse.h  ps2.h  rtc.h
mentos/inc/elf/: elf.h
mentos/src/: boot.S  boot.c  kernel.c  multiboot.c  resource_tracing.c
programs/: CMakeLists.txt  ansi_colors.h  cat.c  chmod.c  chown.c  clear.c  cp.c  cpuid.c  date.c  echo.c  edit.c  env.c  false.c  head.c  help.c  id.c  init.c  ipcrm.c  ipcs.c  kill.c  login.c  logo.c  ls.c  man.c  mkdir.c  more.c  nice.c  poweroff.c  ps.c  pwd.c  reset.c  rm.c  rmdir.c  runtests.c  shell.c  showpid.c  sleep.c  start.c  startERR.c  stat.c  (+3 more)
programs/tests/: CMakeLists.txt  myProg.c  t_abort.c  t_alarm.c  t_big_write.c  t_chdir.c  t_creat.c  t_dup.c  t_environ.c  t_exec.c  t_exec_callee.c  t_exit.c  t_ext2_audit_mount_cache.c  t_ext2_audit_overflow.c  t_ext2_audit_read_failure.c  t_ext2_audit_write_boundary.c  t_fflush.c  t_fgets.c  t_fork.c  t_getenv.c  t_gid.c  t_groups.c  t_grp.c  t_hashmap.c  t_itimer.c  t_kill.c  t_list.c  t_mem.c  t_mkdir.c  t_msgget.c  t_ndtree.c  t_periodic1.c  t_periodic2.c  t_periodic3.c  t_pipe_blocking.c  t_pipe_child.c  t_pipe_non_blocking.c  t_pipe_single.c  t_pwd.c  t_scanf.c  (+21 more)
(+465 files in other folders)
